<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/class_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:text="@string/class_name" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/date_bottom_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:text="@string/date_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/checkin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:textSize="@dimen/time_label_size"
                android:text="@string/checkin_text" />

            <TextView
                android:id="@+id/checkin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/checkin_label"
                android:textSize="@dimen/time_label_size"
                android:text="@string/undefined_time" />

            <TextView
                android:id="@+id/checkout_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkin_label"
                android:textSize="@dimen/time_label_size"
                android:text="@string/checkout_text" />

            <TextView
                android:id="@+id/checkout_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/checkout_label"
                android:layout_alignLeft="@id/checkin_time"
                android:layout_below="@id/checkin_label"
                android:textSize="@dimen/time_label_size"
                android:text="@string/undefined_time" />
        </RelativeLayout>
    </LinearLayout>






    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_button_text"
        android:onClick="registerAttendance"/>
</LinearLayout>